--- a/Snake/Snake.csproj
+++ b/Snake/Snake.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Circle.cs" />
+    <Compile Include="Food.cs" />
     <Compile Include="GameForm.cs">
       <SubType>Form</SubType>
     </Compile>
